load_balancing/deployment-edge-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: flask-task-edge-lb
  labels:
    app: flask-edge-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-task-lb
      version: edge
  template:
    metadata:
      labels:
        app: flask-task-lb
        version: edge
    spec:
      nodeSelector:
        edge-node: "true"
      containers:
        - name: flask-container-edge-lb
          image: flask-tasks-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 1
            limits:
              cpu: 8
