load_balancing/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-task-service-lb
spec:
  selector: 
    app: flask-task-lb
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
